# Cell-Engineering-Simulation

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md
examples/: endoplasmic_reticulum_test.py  full_cell_simulation.py  glycolysis_test.py  golgi_test.py  lysosome_test.py  membrane_test.py  mitochondrion_test.py  nucleus_test.py  ribosome_test.py
src/cell_simulation/compartments/: cytoplasm.py
src/cell_simulation/core/: simulation.py
src/cell_simulation/organelles/: cell_membrane.py  endoplasmic_reticulum.py  golgi.py  lysosome.py  mitochondrion.py  nucleus.py  ribosome.py
src/cell_simulation/processes/: glycolysis.py
src/cell_simulation/state/: cell_environment.py  cell_state.py
src/cell_simulation/transport/: diffusion.py
src/cell_simulation/utils/: config.py
